Fixed Data Files Add button dropdown off-centered UI (#863)

--- a/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
+++ b/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
@@ -12,7 +12,7 @@
   padding-left: var(--horizontal-buffer);
 }
 #data-files-add {
-  width: 140px;
+  width: 174px;
 }
 
 .data-files-nav {
@@ -36,6 +36,7 @@
     border-right: 10px solid transparent;
     border-bottom: 10px solid var(--global-color-accent--normal);
     border-left: 10px solid transparent;
+    margin-left: 20px;
     content: '';
   }
   .dropdown-menu::after {
@@ -45,6 +46,7 @@
     border-right: 9px solid transparent;
     border-bottom: 9px solid #ffffff;
     border-left: 9px solid transparent;
+    margin-left: 20px;
     content: '';
   }
 
